fixed: Overflow en el contenido

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,3 @@
-html{
-    overflow-x: hidden;
-}
 
 h2,
 #grupo {
@@ -18,7 +15,6 @@ li {
 
 /*BARRA DE NAVEGACION*/
 #navbar {
-    width: 105%;
     background-color: #2b2e44;
 }
 
@@ -53,12 +49,14 @@ th, td{
     padding: 20px;
 }
 
+.row{
+    width: 100%;
+}
 
 /*PIE DE PAGINA*/
 
 footer {
     background-color: #121018;
-    width: 105%;
     text-align: center;
 }
 
